--- a/themes/stereotype-theme/layouts/_default/single.html
+++ b/themes/stereotype-theme/layouts/_default/single.html
@@ -5,56 +5,26 @@
 <html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
 <head>
     {{ partial "head.html" . }}
-    <script src="{{ .Site.BaseURL }}js/jquery.excoloSlider.min.js"></script>
     <link href="{{ .Site.BaseURL }}css/jquery.excoloSlider.css" rel="stylesheet">
 </head>
 <body id="page-top" class="index">
 <section id="main">
 
-        <div class="container">
+    <div class="container">
 
-            <div class="row">
-                <div class="col-lg-12 text-right"><br><br><br>
-                    <h2 id="title" style="font-weight: 700;">{{ .Title }}</h2>
-                </div>
+        <div class="row">
+            <div class="col-lg-12 text-right"><br><br><br>
+                <h2 id="title" style="font-weight: 700;">{{ .Title }}</h2>
             </div>
-            <br><br>
-            <div class="row">
-                <div class="col-lg-5 text-left">
-                    <p>{{ .Content }}</p>
-                </div>
-                <div  class="col-lg-7 text-right">
-                    <div id="slider">
-                    {{ $files := readDir (printf "static/img/%s" $images) }}
-                    {{ range $files }}
-                        {{ if ne  .Name "default.png" }}
-                        <img src="{{$url}}img/{{ $images }}/{{.Name}}" class="img-responsive img-centered" />
-                        {{ end }}
-                    {{ end }}
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-lg-12 text-left"><br><br><br>
-                    <b><a href="{{ .Site.BaseURL }}">< Retour</a></b>
-                </div>
-            </div>
-
         </div>
-
-
-<script>
-
-    $(document).ready(function () {
-        $("#slider").excoloSlider({
-            interval: 5000, // = 5 seconds
-            playReverse: true,
-            width: '600',
-            hight: '600'
-        });
-    });
-
-</script>
+        <br><br>
+        <div class="row">
+            <div class="col-lg-12 text-left">
+                <p>{{ .Content }}</p>
+            </div>
+        </div>
+    </div>
 </section>
+
 </body>
+</html>
