--- a/themes/stereotype-theme/layouts/index.html
+++ b/themes/stereotype-theme/layouts/index.html
@@ -1,19 +1,1 @@
-<!DOCTYPE html>
-<html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
-    <head>
-        {{ partial "head.html" . }}
-    </head>
-    <body id="page-top" class="index">
-
-        {{ partial "header.html" . }}
-        {{ partial "spotify.html" . }}
-
-        {{ partial "portfolio-grid.html" . }}
-
-        {{ partial "about.html" . }}
-        {{ partial "contact.html" . }}
-        {{ partial "footer.html" . }}
-        {{ partial "js.html" . }}
-
-    </body>
-</html>
+<meta http-equiv="refresh" content="0; url={{ .Site.BaseURL }}fr" />
