--- a/themes/stereotype-theme/layouts/partials/about.html
+++ b/themes/stereotype-theme/layouts/partials/about.html
@@ -4,18 +4,18 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <img class="h2-top" src="{{ .Site.BaseURL }}img/h2-top.png" />
-                <h2>{{ with .Site.Params.about.title }}{{.}}{{ end }}</h2>
+                <h2>{{ with .Params.about_title }}{{.}}{{ end }}</h2>
                 <img class="h2-bottom" src="{{ .Site.BaseURL }}img/h2-bottom.png" />
             </div>
         </div>
         <div class="row">
 
             <div class="col-lg-7">
-                <p>{{ with .Site.Params.about.message }}{{ . | markdownify }}{{ end }}</p>
+                <p>{{ with .Params.about_message }}{{ . | markdownify }}{{ end }}</p>
             </div>
 
             <div class="col-lg-5">
-                <img style="float:right" class="img-responsive" src="{{ .Site.BaseURL }}img/{{ .Site.Params.about.image }}" />
+                <img style="float:right" class="img-responsive" src="{{ .Site.BaseURL }}img/{{ .Params.about_image }}" />
             </div>
 
         </div>
