--- a/themes/stereotype-theme/layouts/partials/portfolio.html
+++ b/themes/stereotype-theme/layouts/partials/portfolio.html
@@ -1,21 +1,21 @@
-{{ "<!-- Portfolio Grid Section -->" | safeHTML }}
+{{ $language := .Params.lang }}
+
 <section id="portfolio">
     <div class="container">
 
         <div class="row">
             <div class="col-lg-12 text-center">
                 <img class="h2-top" src="{{ .Site.BaseURL }}img/h2-top.png" />
-                <h2>{{ with .Site.Params.portfolio.title }}{{.}}{{end}}</h2>
+                <h2>{{ with .Params.portfolio_title }}{{.}}{{end}}</h2>
                 <img class="h2-bottom" src="{{ .Site.BaseURL }}img/h2-bottom.png" />
             </div>
         </div>
 
         <div class="row">
 
-            {{ $url := .Site.BaseURL }}
-            {{ $images := .Params.images }}
+            {{ range sort (where .Site.Pages "Type" "portfolio") "Params.position"  }}
+            {{ if eq .Params.lang $language }}
 
-            {{ range .Data.Pages }}
             <div class="col-lg-6 item">
                 <h3>{{ .Title }}</h3>
                 <p>{{ .Description }}</p>
@@ -24,16 +24,11 @@
                     <img class="img-responsive imgborder"  src="{{ .Site.BaseURL }}img/{{ .Params.images }}/default.png" />
                 </a>
             </div>
+
+            {{ end }}
             {{ end }}
 
         </div>
-
-        <script>
-            $(document).ready(function(){
-                $('.imgborder').hover(function() { $(this).prev().css({'width': $(this).width(),'height':$(this).height()}); });
-
-            });
-        </script>
 
     </div>
 </section>
