--- a/themes/stereotype-theme/layouts/index.html
+++ b/themes/stereotype-theme/layouts/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url={{ .Site.BaseURL }}fr" />
+<meta http-equiv="refresh" content="0; url={{ .Site.BaseURL }}fr/" />
