--- a/themes/stereotype-theme/layouts/partials/js.html
+++ b/themes/stereotype-theme/layouts/partials/js.html
@@ -1,9 +1,9 @@
-
-<script src="//code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
-<script src="{{ .Site.BaseURL }}js/bootstrap.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-<script src="{{ .Site.BaseURL }}js/classie.js"></script>
-<script src="{{ .Site.BaseURL }}js/cbpAnimatedHeader.js"></script>
-<script src="{{ .Site.BaseURL }}js/jqBootstrapValidation.js"></script>
-<script src="{{ .Site.BaseURL }}js/contact_me.js"></script>
-<script src="{{ .Site.BaseURL }}js/freelancer.js"></script>
+<script src="//code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+<script src="{{ .Site.BaseURL }}js/combined.min.js"></script>
+{{/*
+<!--<script src="{{ .Site.BaseURL }}js/bootstrap.js"></script>-->
+<!--<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>-->
+<!--<script src="{{ .Site.BaseURL }}js/classie.js"></script>-->
+<!--<script src="{{ .Site.BaseURL }}js/jqBootstrapValidation.js"></script>-->
+<!--<script src="{{ .Site.BaseURL }}js/contact_me.js"></script>-->
+*/}}
