--- a/themes/stereotype-theme/layouts/partials/portfolio.html
+++ b/themes/stereotype-theme/layouts/partials/portfolio.html
@@ -1,8 +1,6 @@
 {{ $language := .Params.lang }}
-
 <section id="portfolio">
     <div class="container">
-
         <div class="row">
             <div class="col-lg-12 text-center">
                 <img class="h2-top" src="{{ .Site.BaseURL }}img/h2-top.png" />
@@ -10,12 +8,9 @@
                 <img class="h2-bottom" src="{{ .Site.BaseURL }}img/h2-bottom.png" />
             </div>
         </div>
-
         <div class="row">
-
             {{ range sort (where .Site.Pages "Type" "portfolio") "Params.position"  }}
             {{ if eq .Params.lang $language }}
-
             <div class="col-lg-6 item">
                 <h3>{{ .Title }}</h3>
                 <p>{{ .Description }}</p>
@@ -24,11 +19,7 @@
                     <img class="img-responsive imgborder"  src="{{ .Site.BaseURL }}img/{{ .Params.images }}/default.png" />
                 </a>
             </div>
-
-            {{ end }}
-            {{ end }}
-
+            {{ end }}{{ end }}
         </div>
-
     </div>
 </section>
