--- a/themes/stereotype-theme/static/css/freelancer.css
+++ b/themes/stereotype-theme/static/css/freelancer.css
@@ -1,310 +1,73 @@
-/*!
- * Start Bootstrap - Freelancer Bootstrap Theme (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
-body {
-    overflow-x: hidden;
-    color: #333333;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 200;
-    font-size: 16px;
-}
-
-
-.small {
-    font-size: 16px;
-}
-
+body{overflow-x:hidden;color:#333333;font-family:'Raleway', sans-serif;font-weight:200;font-size:16px;}
+.small{font-size:16px;}
 a,
 a:hover,
 a:focus,
 a:active,
-a.active {
-    outline: 0;
-    color: #333333;
-}
-
+a.active{outline:0;color:#333333;}
 h1,
 h2,
 h3,
 h4,
 h5,
-h6 {
-    text-transform: uppercase;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 600;
+h6{text-transform:uppercase;font-family:'Raleway', sans-serif;font-weight:600;}
+.img-centered{margin:0 auto;}
+div.spotify{position:fixed;top:10px;right:10px;z-index:9999;}
+div.spotify .button{cursor:pointer;}
+div.spotify{display:none;}
+header{text-align:center;background:#ffffff;}
+header .container{padding-top:20px!important;padding-bottom:20px;}
+header .logo{display:block;margin:0 auto 20px;}
+header .subtitle{font-family:'Raleway', sans-serif;}
+header .follow{display:block;margin:30px 0;}
+header .lang{font-family:'Raleway', sans-serif;}
+header .follow a{margin:0 20px;}
+span.rollover{opacity:0;-o-transition-duration:3s;-moz-transition-duration:3s;-webkit-transition:-webkit-transform 1s;background:url("../img/zoom.png") center center no-repeat #000;cursor:pointer;position:absolute;z-index:99;color:#FFFFFF;font-size:3em;font-weight:600;text-align:center;vertical-align:middle;}
+span.rollover:hover{opacity:.6;-o-transition-duration:1s;-moz-transition-duration:1s;-webkit-transition:-webkit-transform 1s;-webkit-box-shadow:0px 0px 4px #000;-moz-box-shadow:0px 0px 4px #000;box-shadow:0px 0px 4px #000;}
+#portfolio .item img{z-index:90;display:inherit!important;}
+#portfolio .item:nth-child(2n){text-align:right;}
+#portfolio .item h3{padding-top:20px!important;}
+#portfolio{margin-bottom:50px;}
+#about{margin-bottom:50px;}
+@media(min-width:768px){header .container{padding-top:50px;padding-bottom:50px;}
+    div.spotify{display:inherit;}
+    #portfolio .item:nth-child(2n) h3{padding-top:150px!important;}
+    #portfolio .item:first-child h3{padding-top:0px!important;margin-top:0!important;}
 }
-
-.img-centered {
-    margin: 0 auto;
-}
-
-div.spotify {
-    position:fixed;
-    top:10px;
-    right:10px;
-    z-index: 9999;
-}
-div.spotify .button { cursor:pointer;}
-div.spotify { display:none; }
-
-
-header {
-    text-align: center;
-    background: #ffffff;
-}
-
-header .container {
-    padding-top: 20px!important;
-    padding-bottom: 20px;
-}
-
-header .logo {
-    display: block;
-    margin: 0 auto 20px;
-}
-header .subtitle {
-    font-family: 'Raleway', sans-serif;
-}
-header .follow{
-    display:block;
-    margin:30px 0;
-}
-header .lang {
-    font-family: 'Raleway', sans-serif;
-}
-header .follow a{
-    margin:0 20px;
-}
-
-span.rollover {
-    opacity: 0;
-    -o-transition-duration: 3s;
-    -moz-transition-duration: 3s;
-    -webkit-transition: -webkit-transform 1s;
-    background:url("../img/zoom.png") center center no-repeat #000;
-    cursor: pointer;
-    position: absolute;
-    z-index: 99;
-    color: #FFFFFF;
-    font-size:3em;
-    font-weight: 600;
-    text-align:center;
-    vertical-align: middle;
-
-}
-
-
-span.rollover:hover {
-    opacity: .6;
-    -o-transition-duration: 1s;
-    -moz-transition-duration: 1s;
-    -webkit-transition: -webkit-transform 1s;
-    -webkit-box-shadow: 0px 0px 4px #000;
-    -moz-box-shadow: 0px 0px 4px #000;
-    box-shadow: 0px 0px 4px #000;
-}
-#portfolio .item img { z-index: 90; display: inherit!important; }
-#portfolio .item:nth-child(2n)
-{
-    text-align:right;
-}
-
-#portfolio .item h3
-{
-    padding-top: 20px!important;
-}
-
-#portfolio { margin-bottom: 50px;}
-#about { margin-bottom: 50px;}
-
-
-@media(min-width:768px) {
-
-
-    header .container {
-        padding-top: 50px;
-        padding-bottom: 50px;
-    }
-
-    div.spotify { display:inherit;}
-
-    #portfolio .item:nth-child(2n) h3
-    {
-        padding-top: 150px!important;
-    }
-
-    #portfolio .item:first-child h3
-    {
-        padding-top: 0px!important;
-        margin-top: 0!important;
-    }
-
-}
-
-section {
-    padding: 0px 0;
-    margin:0;
-}
-
-section h2 {
-    margin: 0;
-    color: black;
-    font-weight: 100;
-    padding:10px;
-    letter-spacing: 0.2px!important;
-}
-
-section img.h2-top { margin-top: 30px; }
-section img.h2-bottom { margin-bottom: 30px; }
-
-
-
+section{padding:0px 0;margin:0;}
+section h2{margin:0;color:black;font-weight:100;padding:10px;letter-spacing:0.2px!important;}
+section img.h2-top{margin-top:30px;}
+section img.h2-bottom{margin-bottom:30px;}
 section.success a,
 section.success a:hover,
 section.success a:focus,
 section.success a:active,
-section.success a.active {
-    outline: 0;
-    color: #2c3e50;
+section.success a.active{outline:0;color:#2c3e50;}
+@media(max-width:767px){section{padding:75px 0;}
+    section.first{padding-top:75px;}
 }
-
-@media(max-width:767px) {
-    section {
-        padding: 75px 0;
-    }
-
-    section.first {
-        padding-top: 75px;
-    }
-}
-
-@media(min-width:767px) {
-
-}
-
-.btn-outline {
-    margin-top: 15px;
-    border: solid 2px #fff;
-    font-size: 20px;
-    color: #fff;
-    background: 0 0;
-    transition: all .3s ease-in-out;
-}
-
+@media(min-width:767px){}
+.btn-outline{margin-top:15px;border:solid 2px #fff;font-size:20px;color:#fff;background:0 0;transition:all .3s ease-in-out;}
 .btn-outline:hover,
 .btn-outline:focus,
 .btn-outline:active,
-.btn-outline.active {
-    border: solid 2px #fff;
-    color: #333333;
-    background: #fff;
-}
-
-.floating-label-form-group {
-    position: relative;
-    margin-bottom: 0;
-    padding-bottom: .5em;
-    border-bottom: 1px solid #eee;
-}
-
+.btn-outline.active{border:solid 2px #fff;color:#333333;background:#fff;}
+.floating-label-form-group{position:relative;margin-bottom:0;padding-bottom:.5em;border-bottom:1px solid #eee;}
 .floating-label-form-group input,
-.floating-label-form-group textarea {
-    z-index: 1;
-    position: relative;
-    padding-right: 0;
-    padding-left: 0;
-    border: 0;
-    border-radius: 0;
-    font-size: 1em;
-    background: 0 0;
-    box-shadow: none!important;
-    resize: none;
-}
-
-.floating-label-form-group label {
-    display: block;
-    z-index: 0;
-    position: relative;
-    top: 2em;
-    margin: 0;
-    font-size: .85em;
-    line-height: 1.764705882em;
-    vertical-align: middle;
-    vertical-align: baseline;
-    opacity: 0;
-    -webkit-transition: top .3s ease,opacity .3s ease;
-    -moz-transition: top .3s ease,opacity .3s ease;
-    -ms-transition: top .3s ease,opacity .3s ease;
-    transition: top .3s ease,opacity .3s ease;
-}
-
-.floating-label-form-group::not(:first-child) {
-    padding-left: 14px;
-    border-left: 1px solid #eee;
-}
-
-.floating-label-form-group-with-value label {
-    top: 0;
-    opacity: 1;
-}
-
-.floating-label-form-group-with-focus label {
-    color: #18bc9c;
-}
-
-form .row:first-child .floating-label-form-group {
-    border-top: 1px solid #eee;
-}
-
-footer {
-    color: #fff;
-}
-
-footer h3 {
-    margin-bottom: 30px;
-}
-
-footer .footer-above {
-    padding-top: 50px;
-    background-color: #2c3e50;
-}
-
-footer .footer-col {
-    margin-bottom: 50px;
-}
-
-footer .footer-below {
-    padding: 25px 0;
-    background-color: #233140;
-}
-
+.floating-label-form-group textarea{z-index:1;position:relative;padding-right:0;padding-left:0;border:0;border-radius:0;font-size:1em;background:0 0;box-shadow:none!important;resize:none;}
+.floating-label-form-group label{display:block;z-index:0;position:relative;top:2em;margin:0;font-size:.85em;line-height:1.764705882em;vertical-align:middle;vertical-align:baseline;opacity:0;-webkit-transition:top .3s ease,opacity .3s ease;-moz-transition:top .3s ease,opacity .3s ease;-ms-transition:top .3s ease,opacity .3s ease;transition:top .3s ease,opacity .3s ease;}
+.floating-label-form-group::not(:first-child){padding-left:14px;border-left:1px solid #eee;}
+.floating-label-form-group-with-value label{top:0;opacity:1;}
+.floating-label-form-group-with-focus label{color:#18bc9c;}
+form .row:first-child .floating-label-form-group{border-top:1px solid #eee;}
+footer{color:#fff;}
+footer h3{margin-bottom:30px;}
+footer .footer-above{padding-top:50px;background-color:#2c3e50;}
+footer .footer-col{margin-bottom:50px;}
+footer .footer-below{padding:25px 0;background-color:#233140;}
 .btn:focus,
 .btn:active,
-.btn.active {
-    outline: 0;
-}
-
-.scroll-top {
-    z-index: 1049;
-    position: fixed;
-    right: 2%;
-    bottom: 2%;
-    width: 60px;
-    height: 60px;
-}
-
-.scroll-top .btn {
-    width: 50px;
-    height: 50px;
-    border-radius: 100%;
-    font-size: 20px;
-    line-height: 28px;
-}
-
-.scroll-top .btn:focus {
-    outline: 0;
-}
-
+.btn.active{outline:0;}
+.scroll-top{z-index:1049;position:fixed;right:2%;bottom:2%;width:60px;height:60px;}
+.scroll-top .btn{width:50px;height:50px;border-radius:100%;font-size:20px;line-height:28px;}
+.scroll-top .btn:focus{outline:0;}
